--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "popper.js": "^1.16.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
-    "scss-loader": "0.0.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.3.0",
     "vue-loader": "^15.7.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2",
